# Zoaholic

./: db.py  main.py  pyproject.toml  utils.py
.github/workflows/: main.yml  release.yml
core/: channel_manager.py  handler.py  key_rules.py  log_config.py  metrics.py  middleware.py  response.py  routing.py  stats.py  utils.py
core/channels/: __init__.py  azure_channel.py  claude_channel.py  gemini_channel.py  openai_channel.py  openai_image_channel.py  openai_responses_channel.py  openrouter_channel.py  vertex_channel.py
core/dialects/: claude.py  gemini.py  openai.py  openai_responses.py  registry.py  router.py
core/plugins/: __init__.py  interceptors.py
frontend/src/components/: ApiKeyTestDialog.tsx  ChannelAnalyticsSheet.tsx  InterceptorSheet.tsx  MarkdownRenderer.tsx  ProviderLogos.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Channels.tsx  Dashboard.tsx  Logs.tsx  Plugins.tsx  Settings.tsx
plugins/: claude_thinking.py  claude_tools.py  descript_channel.py  encode_plugins.bat  error_mask.py  gemini_empty_retry.py  image_filter.py  jb_grazie.py  oai_tools.py  request_sanitizer (2).py  request_sanitizer.py
routes/: admin.py  channels.py  health.py  stats.py
scripts/: health_monitor.sh
test/: test_header_merge.py
