[project]
name = "Zoaholic"
version = "1.2.4"
description = "A LLM API gateway with multi-dialect support base on Uni-API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "asyncmy>=0.2.10",
    "certifi==2025.1.31",
    "cryptography==43.0.3",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx-socks==0.9.2",
    "httpx[http2]>=0.27.2",
    "pillow>=11.3.0",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "ruamel-yaml>=0.18.15",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "watchfiles>=1.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "db", "utils"]
packages = ["core", "routes", "plugins"]
